infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voce-aluga
  labels:
    app.kubernetes.io/part-of: voce-aluga
