infra/kubernetes/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: voce-aluga
  labels:
    app: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: http
