infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-web
  namespace: voce-aluga
  labels:
    app: api-web
spec:
  type: ClusterIP
  selector:
    app: api-web
  ports:
    - name: http
      port: 8082
      targetPort: http
